tests/baselines/reference/es6ExportEquals.errors.txt
tests/cases/compiler/es6ExportEquals.ts(4,1): error TS1202: Export assignment cannot be used when targeting ECMAScript 6 or higher. Consider using 'export default' instead.


==== tests/cases/compiler/es6ExportEquals.ts (1 errors) ====
    
    export function f() { }
    
    export = f;
    ~~~~~~~~~~~
!!! error TS1202: Export assignment cannot be used when targeting ECMAScript 6 or higher. Consider using 'export default' instead.
    